// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@overflow-menu: component checks * component renders properly 1`] = `
<Wrapper
  forwardedRef={null}
  items={
    Array [
      Object {
        "icon": [Function],
        "text": "Menu Item 1",
        "textStyle": Object {
          "color": "blue",
          "fontSize": 24,
        },
      },
      Object {
        "disabled": true,
        "icon": [Function],
        "text": "Menu Item 2",
      },
      Object {
        "text": "Menu Item 3",
      },
      Object {
        "icon": [Function],
        "text": "Menu Item 4",
      },
    ]
  }
  onRequestClose={[Function]}
  visible={true}
>
  <View />
</Wrapper>
`;

exports[`@overflow-menu: component checks * single menu-item 1`] = `
<Wrapper
  forwardedRef={null}
  items={
    Array [
      Object {
        "icon": [Function],
        "text": "Menu Item 1",
        "textStyle": Object {
          "color": "blue",
          "fontSize": 24,
        },
      },
    ]
  }
  onRequestClose={[Function]}
  visible={true}
>
  <View />
</Wrapper>
`;

exports[`@overflow-menu-item: component checks * menu item active checks 1`] = `
<Wrapper
  forwardedRef={null}
  onLongPress={[MockFunction]}
  onPressIn={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onPressOut={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  text="Test Menu Item"
/>
`;

exports[`@overflow-menu-item: component checks * menu item active checks 2`] = `
<Wrapper
  forwardedRef={null}
  onLongPress={[MockFunction]}
  onPressIn={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onPressOut={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  text="Test Menu Item"
/>
`;

exports[`@overflow-menu-item: component checks * menu item with "set-1" props 1`] = `
<Wrapper
  disabled={true}
  forwardedRef={null}
  icon={[Function]}
  onPress={[Function]}
  text="Test Menu Item"
/>
`;

exports[`@overflow-menu-item: component checks * menu item with "set-2" props 1`] = `
<Wrapper
  disabled={false}
  forwardedRef={null}
  onPress={[Function]}
  text="Test Menu Item"
/>
`;
